2000-08-02  Jimmy Guo  <guo@hpcleara.cup.hp.com>

	* lib/utils.exp: Add support for a -maxdepth <n>
        option to limit find to <n> directories deep.

	* runtest.exp: Cleanup reference to $env(MULTIPASS) and
        $env(PASS).  These were added by HP but unused since.
	Handle multiple directories in TCL variables
        dir_to_run and cmdline_dir_to_run; limit *.exp find to
        one directory level to avoid foo/bar/baz.exp getting tested
        twice (when ${dir} is 'foo', and when ${dir} is 'foo/bar').
	
	* lib/framework.exp (pass): make compiler_conditional_xfail_data
	a global, corresponding to a recent change to 'proc fail'.
	
2000-07-21  Frank Ch. Eigler  <fche@redhat.com>

	* example/Makefile.am (SUBDIRS): Remove to prevent automatic recursion
	into `calc'.
	(all-local): Add at least `calc' building back.
	* example/Makefile.in: Regenerated.

Fri Jul 21 16:01:43 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	From 2000-04-25 Felix Lee <flee@cygnus.com>:
	* baseboards/tx39-sim.exp: Use idt, not dve linker script.  Delete
 	misleading comments and null statements.

2000-07-08  Angela Marie Thomas <angela@cygnus.com>

	* lib/framework.exp: Use compiler_conditional_xfail_data as a global
	rather than assuming it's set in the level above us.

Fri Jun  9 09:10:48 2000  Catherine Moore  <clm@cygnus.com>

	* lib/libgloss.exp (proc_get_multilibs):  Handle multilib
        pathnames for ports that have defined MULTILIB_EXTRA_OPTS.

Sun Jun  4 12:59:06 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* lib/target.exp (reboot_target): Don't reboot target twice.

Wed May  3 19:41:07 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	From Felix Lee <flee@cygnus.com>:
	* example/calc/Makefile.in (install-info): Add target.

Fri Apr 21 13:33:36 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* example/calc/Makefile.in: Add target info.

Tue Apr 18 15:49:00 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* Makefile.am (SUBDIRS): Add directory example.
	* Makefile.in: Re-generate.