@@ -417,8 +417,8 @@ proc cleanup {} {
 # Setup a flag to control whether a failure is expected or not
 #
 # Multiple target triplet patterns can be specified for targets
-# for which the test fails.  A decimal number can be specified,
-# which is the PRMS number.
+# for which the test fails.  A bug report ID can be specified,
+# which is a string without '-'.
 #
 proc setup_xfail { args } {
     global xfail_flag
@@ -428,8 +428,8 @@ proc setup_xfail { args } {
     set argc [ llength $args ]
     for { set i 0 } { $i < $argc } { incr i } {
 	set sub_arg [ lindex $args $i ]
-	# is a prms number. we assume this is a number with no characters
-	if [regexp "^\[0-9\]+$" $sub_arg] { 
+	# is a prms number. we assume this is a string with no '-' characters
+	if [regexp "^\[^\-\]+$" $sub_arg] { 
 	    set xfail_prms $sub_arg
 	    continue
 	}
